<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daiyan.gridimagesearch.activities.AdvancedSearchSettingActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advancedSearch"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="52dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageSize"
            android:id="@+id/tvImageSize"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spImageSize"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="320dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ColorFilter"
            android:id="@+id/tvColorFilter"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spColorFilter"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ImageType"
            android:id="@+id/tvImageType"
            android:textSize="20sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spImageType"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SiteFilter"
            android:id="@+id/tvSiteFilter"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSiteFilter" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:id="@+id/btnConfirm"
        android:layout_gravity="center_horizontal"
        android:onClick="saveSetting" />

</LinearLayout>
